--- a/templates/base.html
+++ b/templates/base.html
@@ -1,25 +1,30 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    {% load static %}
-    {% load bootstrap5 %}
-    {% load bootstrap_icons %}
-    {% bootstrap_javascript %}
-    <title>
-      {% block title %}
-        My Todo
-      {% endblock %}
-    </title>
-    {% comment %} <link rel="stylesheet" href="{% static 'css/cover.css' %}" /> {% endcomment %}
-    <link rel="stylesheet" href="{% static 'css/custom.css' %}" />
-    {% bootstrap_css %}
-  </head>
-  <body>
-    <div id="content">
-      {% block content %}
-        <!-- Child templates will define their content here -->
-      {% endblock %}
-    </div>
-    {% bootstrap_javascript %}
-  </body>
-</html>
+{% load static %}
+{% load sass_tags %}
+{% load bootstrap5 %}
+{% block main_content %}
+  <link rel="stylesheet" href="{% static 'css/styles.css' %}" type="text/css" />
+  <link rel="stylesheet" href="{% sass_src 'styles.scss' %}" type="text/css" />
+  {% comment %} {% bootstrap_css %} {% endcomment %}
+  {% bootstrap_javascript %}
+  {% block content %}
+
+  {% endblock %}
+  <script>
+    function logBootstrapBreakpoint() {
+      let width = window.innerWidth
+      let breakpoint = ''
+    
+      if (width < 576) breakpoint = 'xs (Extra Small)'
+      else if (width < 768) breakpoint = 'sm (Small)'
+      else if (width < 992) breakpoint = 'md (Medium)'
+      else if (width < 1200) breakpoint = 'lg (Large)'
+      else if (width < 1400) breakpoint = 'xl (Extra Large)'
+      else breakpoint = 'xxl (Extra Extra Large)'
+    
+      console.log(`Bootstrap Size: ${breakpoint}`)
+    }
+    
+    window.onload = logBootstrapBreakpoint
+    window.onresize = logBootstrapBreakpoint
+  </script>
+{% endblock %}
