--- a/templates/base.html
+++ b/templates/base.html
@@ -27,4 +27,6 @@
     window.onload = logBootstrapBreakpoint
     window.onresize = logBootstrapBreakpoint
   </script>
+  {% comment %} <script src="{% static 'htmx.min.js' %}" defer></script> {% endcomment %}
+  <script src="https://unpkg.com/htmx.org@1.9.12/dist/htmx.min.js"></script>
 {% endblock %}
