--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,23 @@
   <nav>
     {% include 'navbar.html' %}
   </nav>
-  {% block content %}
-
+  {% block messages %}
+    {% if messages %}
+      <div class="container" style="margin-top:100px">
+        {% for message in messages %}
+          <div class="alert alert-warning alert-dismissible fade show" role="alert">
+            <strong>{{ message }}</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+          </div>
+        {% endfor %}
+      </div>
+    {% endif %}
   {% endblock %}
+  <div>
+    {% block content %}
+
+    {% endblock %}
+  </div>
   <script>
     function logBootstrapBreakpoint() {
       let width = window.innerWidth
