--- a/templates/forms/create_list_form.html
+++ b/templates/forms/create_list_form.html
@@ -3,14 +3,14 @@
 {% load static %}
 {% load widget_tweaks %}
 {% block content %}
-  <div class="container">
-    <div class="card shadow-lg p-3 mb-5 rounded-4 mt-4">
-    <h2>{{title}}</h2>
+  <div class="container  d-flex justify-content-center align-items-center vh-100 w-100">
+    <div class="card shadow-lg p-3 mb-5 rounded-4 ">
     <form method="post">
       {% csrf_token %}
       <div class="container">
-        <div class="row row-cols-1 row-cols-md-2">
+        <div class="row ">
           <div class="container">
+          <h2>{{title}}</h2>
             {% for hidden in form.hidden_fields %}{{ hidden }}{% endfor %}
             {% for field in form.visible_fields %}
               <div class="form-group my-1">
@@ -19,7 +19,7 @@
                 {% for error in field.errors %}<span class="help-block text-danger">{{ error }}</span>{% endfor %}
               </div>
             {% endfor %}
-            <div class="mt-3">
+            <div class="d-grid gap-2 d-md-block mx-auto min-vw-50" >
               {% if form.instance.pk %}
                 <input class="btn btn-primary" type="submit" value="Save List" />
               {% else %}
@@ -29,6 +29,7 @@
 
               {% comment %} <a  class="btn btn-primary my-3">Back</a> {% endcomment %}
             </div>
+         
             <div class="mt-3">
               <!-- Back button as a link to main menu -->
           </div>
