sccs folder needs to be in specific location in static. Reason for adding to git.

--- a/static/styles.scss
+++ b/static/styles.scss
@@ -1,5 +1,5 @@
 $primary: #34373a;
 
-@import "admin/scss/functions";
-@import "admin/scss/bootstrap";
-@import "admin/scss/mixins";
+@import "scss/functions";
+@import "scss/bootstrap";
+@import "scss/mixins";
